--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ dist: bionic
 language: minimal
 
 before_install:
+  - sudo useradd --uid 1450 --gid 1450 cvmfs
   - sudo mkdir /lower /upper /work /cvmfs /cvmfs/sandbox.galaxyproject.org
   - curl -O https://ecsft.cern.ch/dist/cvmfs/cvmfs-release/cvmfs-release-latest_all.deb
   #- sudo apt-get update
@@ -17,9 +18,21 @@ before_install:
   - sudo cp .ci/default.local /etc/cvmfs
   - sudo cp .ci/sandbox.galaxyproject.org.pub /etc/cvmfs/keys
   - sudo mount -t cvmfs sandbox.galaxyproject.org /lower
-  - ls -l /lower
   - sudo mount -t overlay overlay -o lowerdir=/lower,upperdir=/upper,workdir=/work /cvmfs/sandbox.galaxyproject.org
-  - ls -l /cvmfs/sandbox.galaxyproject.org
+  - pip install ephemeris planemo
 
 script:
-  - echo yay
+  - >-
+    docker run -d -p 8080:80
+      -e GALAXY_CONFIG_INSTALL_DATABASE_CONNECTION=sqlite:////cvmfs/sandbox.galaxyproject.org/config/install.sqlite
+      -e GALAXY_CONFIG_TOOL_CONFIG_FILE=/cvmfs/sandbox.galaxyproject.org/config/shed_tool_conf.xml
+      -e GALAXY_CONFIG_MASTER_API_KEY=deadbeef
+      -e GALAXY_CONFIG_CONDA_PREFIX=/cvmfs/sandbox.galaxyproject.org/dependencies/conda
+      -e CONDARC=/cvmfs/sandbox.galaxyproject.org/dependencies/_condarc
+      -v /cvmfs/usegalaxy.galaxyproject.org:/cvmfs/usegalaxy.galaxyproject.org
+      bgruening/galaxy-stable
+  - galaxy-wait -v --timeout 300
+  - shed-tools install -v -a deadbeef -t ./common_toolset/get_data.yml --test --test_json tests.json
+  - planemo test_reports test_output_text tests.txt tests.json
+  - cat tests.txt
+  - ls -lR /upper
