--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ dist: bionic
 language: minimal
 
 before_install:
+  - sudo groupadd --gid 1450 cvmfs
   - sudo useradd --uid 1450 --gid 1450 cvmfs
   - sudo mkdir /lower /upper /work /cvmfs /cvmfs/sandbox.galaxyproject.org
   - curl -O https://ecsft.cern.ch/dist/cvmfs/cvmfs-release/cvmfs-release-latest_all.deb
