--- a/.travis.yml
+++ b/.travis.yml
@@ -20,20 +20,22 @@ before_install:
   - sudo cp .ci/sandbox.galaxyproject.org.pub /etc/cvmfs/keys
   - sudo mount -t cvmfs sandbox.galaxyproject.org /lower
   - sudo mount -t overlay overlay -o lowerdir=/lower,upperdir=/upper,workdir=/work /cvmfs/sandbox.galaxyproject.org
-  - sudo pip install ephemeris planemo
 
-script:
+install:
+  - sudo pip install ephemeris planemo
   - >-
-    docker run -d -p 8080:80
+    docker run -d -p 8080:80 --name=galaxy
     -e GALAXY_CONFIG_INSTALL_DATABASE_CONNECTION=sqlite:////cvmfs/sandbox.galaxyproject.org/config/install.sqlite
     -e GALAXY_CONFIG_TOOL_CONFIG_FILE=/cvmfs/sandbox.galaxyproject.org/config/shed_tool_conf.xml
     -e GALAXY_CONFIG_MASTER_API_KEY=deadbeef
     -e GALAXY_CONFIG_CONDA_PREFIX=/cvmfs/sandbox.galaxyproject.org/dependencies/conda
+    -e GALAXY_HANDLER_NUMPROCS=0
     -e CONDARC=/cvmfs/sandbox.galaxyproject.org/dependencies/_condarc
-    -v /cvmfs/usegalaxy.galaxyproject.org:/cvmfs/usegalaxy.galaxyproject.org
+    -v /cvmfs/sandbox.galaxyproject.org:/cvmfs/sandbox.galaxyproject.org
     bgruening/galaxy-stable
-  - galaxy-wait -v --timeout 300
-  - shed-tools install -v -a deadbeef -t ./common_toolset/get_data.yml --test --test_json tests.json
-  - planemo test_reports test_output_text tests.txt tests.json
-  - cat tests.txt
+  - galaxy-wait -v --timeout 120 || { docker exec galaxy cat /var/log/nginx/error.log /home/galaxy/logs/uwsgi.log; curl http://localhost:8080; travis_terminate 1; }
+
+script:
+  - shed-tools install -v -a deadbeef -t ./common_toolset/get_data.yml --test --test_json tests.json || { docker exec galaxy cat /home/galaxy/logs/uwsgi.log; travis_terminate 1; }
+  - planemo test_reports test_output_text tests.txt tests.json && cat tests.txt || { cat tests.json; travis_terminate 1; }
   - ls -lR /upper
