--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,12 @@ install:
     -e GALAXY_HANDLER_NUMPROCS=0
     -e CONDARC=/cvmfs/sandbox.galaxyproject.org/dependencies/_condarc
     -v /cvmfs/sandbox.galaxyproject.org:/cvmfs/sandbox.galaxyproject.org
+    -v $(pwd)/.ci/job_conf.xml:/job_conf.xml
+    -e GALAXY_CONFIG_JOB_CONFIG_FILE=/job_conf.xml
     bgruening/galaxy-stable
   - galaxy-wait -v --timeout 120 || { docker exec galaxy cat /var/log/nginx/error.log /home/galaxy/logs/uwsgi.log; curl http://localhost:8080; travis_terminate 1; }
 
 script:
   - shed-tools install -v -a deadbeef -t ./common_toolset/get_data.yml.lock --test --test_json tests.json || { docker exec galaxy cat /home/galaxy/logs/uwsgi.log; travis_terminate 1; }
-  - planemo test_reports test_output_text tests.txt tests.json && cat tests.txt || { cat tests.json; travis_terminate 1; }
+  - planemo test_reports --test_output_text tests.txt tests.json && cat tests.txt || { cat tests.json; travis_terminate 1; }
   - ls -lR /upper
