String manipulation doesn't work in hash key

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,8 @@ before_install:
                 echo "$op $path"
                 TOOL_YAMLS+=("${path}")
                 echo "TOOLSET: ${path%%/*}"
-                TOOLSETS[${path%%/*}]=
+                toolset=${path%%/*}
+                TOOLSETS[$toolset]=
                 ;;
         esac
     done < <(git diff --color=never --name-status "$TRAVIS_COMMIT_RANGE" -- $(for d in "${!TOOLSET_REPOS[@]}"; do echo "${d}/"; done); echo "M common_toolset/filter_and_sort.yml.lock")
