--- a/.travis.yml
+++ b/.travis.yml
@@ -54,8 +54,7 @@ before_install:
                 TOOL_YAMLS+=("${path}")
                 ;;
         esac
-    done < <(git diff --color=never --name-status "$TRAVIS_COMMIT_RANGE" -- $(for d in "${!TOOLSET_REPOS[@]}"; do echo "${d}/"; done); echo "M common_toolset/filter_and_sort.yml.lock")
-  # FIXME: remove hardcoded tool above
+    done < <(git diff --color=never --name-status "$TRAVIS_COMMIT_RANGE" -- $(for d in "${!TOOLSET_REPOS[@]}"; do echo "${d}/"; done))
   - set | grep '^TOOL'
   - |
     if [ ${#TOOL_YAMLS[@]} -eq 0 ]; then
@@ -64,7 +63,9 @@ before_install:
     fi
   - REPO="${TOOLSET_REPOS[$TOOLSET]}"
   - |
-    if [ -z "$REPO" ]; then
+    if [ -n "$REPO" ]; then
+        echo "Setting up CVMFS for repo ${REPO}"
+    else
         echo "ERROR: No repo defined for toolset $TOOLSET, set one in \$TOOLSET_REPOS"
         travis_terminate 1
     fi
@@ -82,7 +83,6 @@ before_install:
 
 install:
   - sudo pip install ephemeris planemo
-  # FIXME: conda path below is incorrect for test/main
   - >-
     docker run -d -p 8080:80 --name=galaxy
     -e GALAXY_CONFIG_INSTALL_DATABASE_CONNECTION=sqlite:////cvmfs/${REPO}/config/install.sqlite
@@ -130,6 +130,7 @@ script:
     done
 
 after_success:
+  # TODO: uncomment next line
   #- '[ "$TRAVIS_PULL_REQUEST" != "false" -o "$TRAVIS_BRANCH" != "master" ] && travis_terminate 0 || true'
   - openssl aes-256-cbc -K $encrypted_0ffba610202a_key -iv $encrypted_0ffba610202a_iv -in .ci/deploy_key.pem.enc -out .ci/deploy_key.pem -d
   - echo 'cvmfs0-psu0.galaxyproject.org ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGaFllzcKadhpbZ6hNXSgIfgYspqR+IB7NVxJf3FFqZr' >> $HOME/.ssh/known_hosts
@@ -148,5 +149,6 @@ after_success:
         ssh ${REPO_USER}@cvmfs0-psu0.galaxyproject.org cvmfs_server abort -f ${REPO};
         travis_terminate 1;
     }
+  # TODO: un-echo next line, comment last line
   - echo ssh ${REPO_USER}@cvmfs0-psu0.galaxyproject.org "cvmfs_server publish -m 'Automated tool install for commit $TRAVIS_COMMIT' ${REPO}"
   - ssh ${REPO_USER}@cvmfs0-psu0.galaxyproject.org "cvmfs_server abort -f ${REPO}"
