--- a/.travis.yml
+++ b/.travis.yml
@@ -146,6 +146,8 @@ script:
 after_success:
   # TODO: uncomment following line
   #- '[ "$TRAVIS_PULL_REQUEST" != "false" -o "$TRAVIS_BRANCH" != "master" ] && travis_terminate 0 || true'
+  - |
+    [ -d /upper/deps/_conda -o -d /upper/shed_tools ] || { echo "No changes to /upper"; travis_terminate 0; }
   - openssl aes-256-cbc -K $encrypted_0ffba610202a_key -iv $encrypted_0ffba610202a_iv -in .ci/deploy_key.pem.enc -out .ci/deploy_key.pem -d
   - cp -p .ci/known_hosts $HOME/.ssh/known_hosts
   - eval "$(ssh-agent -s)"
