Use declare -p instead of set -x

--- a/.ci/repos.conf
+++ b/.ci/repos.conf
@@ -1,7 +1,5 @@
 # source me
 
-set -x
-
 # Map toolset dirs to repo names
 declare -g -A TOOLSET_REPOS=(
     [common_toolset]=sandbox.galaxyproject.org
@@ -37,4 +35,4 @@ declare -g -A SHED_TOOL_CONFIGS=(
     [main.galaxyproject.org]=/cvmfs/main.galaxyproject.org/config/migrated_tools_conf.xml,/cvmfs/main.galaxyproject.org/config/shed_tool_conf.xml
 )
 
-{ set +x; } 2>/dev/null
+declare -p TOOLSET_REPOS REPO_STRATUM0S REPO_USERS CONDA_PATHS SHED_TOOL_CONFIGS
