/api/tools somehow only returns tools installed via usegalaxy-tools, what's in shed_tool_conf.xml in CVMFS??

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,7 @@ before_install:
   - sudo cp .ci/*.pub /etc/cvmfs/keys
   - sudo mount -t cvmfs "$REPO" "/lower"
   - sudo mount -t overlay overlay -o lowerdir=/lower,upperdir=/upper,workdir=/work "/cvmfs/${REPO}"
+  - cat /cvmfs/${REPO}/config/shed_tool_conf.xml
 
 install:
   - sudo pip install git+https://github.com/natefoo/ephemeris.git@spinner planemo
@@ -97,7 +98,7 @@ install:
     }
 
 script:
-  - echo "TOOLS:" ; curl http://localhost:8080/api/tools
+  - echo "TOOLS:" ; curl http://localhost:8080/api/tools ; echo ''
   - |
     for tool_yaml in "${TOOL_YAMLS[@]}"; do
         shed-tools install -v -a deadbeef -t "$tool_yaml" || {
