Correct Install DB path

--- a/.ci/repos.conf
+++ b/.ci/repos.conf
@@ -35,4 +35,12 @@ declare -g -A SHED_TOOL_CONFIGS=(
     [main.galaxyproject.org]=/cvmfs/main.galaxyproject.org/config/migrated_tools_conf.xml,/cvmfs/main.galaxyproject.org/config/shed_tool_conf.xml
 )
 
-declare -p TOOLSET_REPOS REPO_STRATUM0S REPO_USERS CONDA_PATHS SHED_TOOL_CONFIGS
+# Map repo names to install DBs
+declare -g -A INSTALL_DATABASES=(
+    [sandbox.galaxyproject.org]=/cvmfs/sandbox.galaxyproject.org/config/install.sqlite
+    [test.galaxyproject.org]=/cvmfs/test.galaxyproject.org/var/galaxy_test_install.sqlite
+    [main.galaxyproject.org]=/cvmfs/main.galaxyproject.org/var/galaxy_main_install.sqlite
+)
+
+# Print for debugging
+declare -p TOOLSET_REPOS REPO_STRATUM0S REPO_USERS CONDA_PATHS SHED_TOOL_CONFIGS INSTALL_DATABASES
