--- a/.travis.yml
+++ b/.travis.yml
@@ -67,13 +67,13 @@ before_install:
   - sudo cp .ci/*.pub /etc/cvmfs/keys
   - sudo mount -t cvmfs "$REPO" "/lower"
   - sudo mount -t overlay overlay -o lowerdir=/lower,upperdir=/upper,workdir=/work "/cvmfs/${REPO}"
-  - cat /cvmfs/${REPO}/config/shed_tool_conf.xml
+  #- cat /cvmfs/${REPO}/config/shed_tool_conf.xml
 
 install:
   - sudo pip install git+https://github.com/natefoo/ephemeris.git@spinner planemo
   - >-
     docker run -d -p 8080:80 --name=galaxy
-    -e GALAXY_CONFIG_INSTALL_DATABASE_CONNECTION=sqlite:////cvmfs/${REPO}/config/install.sqlite
+    -e GALAXY_CONFIG_INSTALL_DATABASE_CONNECTION=sqlite:///${INSTALL_DATABASES[$REPO]}
     -e GALAXY_CONFIG_TOOL_CONFIG_FILE=${SHED_TOOL_CONFIGS[$REPO]}
     -e GALAXY_CONFIG_MASTER_API_KEY=deadbeef
     -e GALAXY_CONFIG_CONDA_PREFIX=${CONDA_PATHS[$REPO]}
@@ -98,7 +98,7 @@ install:
     }
 
 script:
-  - echo "GALAXY LOG:" ; docker exec galaxy cat /home/galaxy/logs/uwsgi.log ; echo ''
+  #- echo "GALAXY LOG:" ; docker exec galaxy cat /home/galaxy/logs/uwsgi.log ; echo ''
   - echo "TOOLS:" ; curl http://localhost:8080/api/tools ; echo ''
   - |
     for tool_yaml in "${TOOL_YAMLS[@]}"; do
