Add production usegalaxy repo to repos.conf

--- a/.ci/repos.conf
+++ b/.ci/repos.conf
@@ -2,13 +2,15 @@
 
 # Map toolset dirs to repo names
 declare -g -A TOOLSET_REPOS=(
-    [common_toolset]=sandbox.galaxyproject.org
+    [common_toolset]=usegalaxy.galaxyproject.org
+    [sandbox]=sandbox.galaxyproject.org
     [test.galaxyproject.org]=test.galaxyproject.org
     [usegalaxy.org]=main.galaxyproject.org
 )
 
 # Map repo names to stratum 0s
 declare -g -A REPO_STRATUM0S=(
+    [usegalaxy.galaxyproject.org]=cvmfs0-psu0.galaxyproject.org
     [sandbox.galaxyproject.org]=cvmfs0-psu0.galaxyproject.org
     [test.galaxyproject.org]=cvmfs0-tacc0.galaxyproject.org
     [main.galaxyproject.org]=cvmfs0-tacc0.galaxyproject.org
@@ -16,6 +18,7 @@ declare -g -A REPO_STRATUM0S=(
 
 # Map repo names to owner on stratum 0s
 declare -g -A REPO_USERS=(
+    [usegalaxy.galaxyproject.org]=usegalaxy
     [sandbox.galaxyproject.org]=sandbox
     [test.galaxyproject.org]=g2test
     [main.galaxyproject.org]=g2main
@@ -23,6 +26,7 @@ declare -g -A REPO_USERS=(
 
 # Map repo names to conda base dirs
 declare -g -A CONDA_PATHS=(
+    [usegalaxy.galaxyproject.org]=/cvmfs/usegalaxy.galaxyproject.org/dependencies/conda
     [sandbox.galaxyproject.org]=/cvmfs/sandbox.galaxyproject.org/dependencies/conda
     [test.galaxyproject.org]=/cvmfs/test.galaxyproject.org/deps/_conda
     [main.galaxyproject.org]=/cvmfs/main.galaxyproject.org/deps/_conda
@@ -30,6 +34,7 @@ declare -g -A CONDA_PATHS=(
 
 # Map repo names to shed tool configs
 declare -g -A SHED_TOOL_CONFIGS=(
+    [usegalaxy.galaxyproject.org]=/cvmfs/usegalaxy.galaxyproject.org/config/shed_tool_conf.xml
     [sandbox.galaxyproject.org]=/cvmfs/sandbox.galaxyproject.org/config/shed_tool_conf.xml
     [test.galaxyproject.org]=/cvmfs/test.galaxyproject.org/config/shed_tool_conf.xml,/cvmfs/test.galaxyproject.org/config/migrated_tools_conf.xml
     [main.galaxyproject.org]=/cvmfs/main.galaxyproject.org/config/shed_tool_conf.xml,/cvmfs/main.galaxyproject.org/config/migrated_tools_conf.xml
@@ -37,6 +42,7 @@ declare -g -A SHED_TOOL_CONFIGS=(
 
 # Map repo names to shed tool directories
 declare -g -A SHED_TOOL_DIRS=(
+    [usegalaxy.galaxyproject.org]=/cvmfs/usegalaxy.galaxyproject.org/tools
     [sandbox.galaxyproject.org]=/cvmfs/sandbox.galaxyproject.org/tools
     [test.galaxyproject.org]=/cvmfs/test.galaxyproject.org/shed_tools
     [main.galaxyproject.org]=/cvmfs/main.galaxyproject.org/shed_tools
@@ -44,6 +50,7 @@ declare -g -A SHED_TOOL_DIRS=(
 
 # Map repo names to shed tool data table configs
 declare -g -A SHED_TOOL_DATA_TABLE_CONFIGS=(
+    [usegalaxy.galaxyproject.org]=/cvmfs/usegalaxy.galaxyproject.org/config/shed_tool_data_table_conf.xml
     [sandbox.galaxyproject.org]=/cvmfs/sandbox.galaxyproject.org/config/shed_tool_data_table_conf.xml
     [test.galaxyproject.org]=/cvmfs/test.galaxyproject.org/config/shed_tool_data_table_conf.xml
     [main.galaxyproject.org]=/cvmfs/main.galaxyproject.org/config/shed_tool_data_table_conf.xml
@@ -51,6 +58,7 @@ declare -g -A SHED_TOOL_DATA_TABLE_CONFIGS=(
 
 # Map repo names to shed manager configs
 declare -g -A SHED_DATA_MANAGER_CONFIGS=(
+    [usegalaxy.galaxyproject.org]=/cvmfs/usegalaxy.galaxyproject.org/config/shed_data_manager_conf.xml
     [sandbox.galaxyproject.org]=/cvmfs/sandbox.galaxyproject.org/config/shed_data_manager_conf.xml
     [test.galaxyproject.org]=/cvmfs/test.galaxyproject.org/config/shed_data_manager_conf.xml
     [main.galaxyproject.org]=/cvmfs/main.galaxyproject.org/config/shed_data_manager_conf.xml
@@ -58,6 +66,7 @@ declare -g -A SHED_DATA_MANAGER_CONFIGS=(
 
 # Map repo names to install DBs
 declare -g -A INSTALL_DATABASES=(
+    [usegalaxy.galaxyproject.org]=/cvmfs/usegalaxy.galaxyproject.org/config/install.sqlite
     [sandbox.galaxyproject.org]=/cvmfs/sandbox.galaxyproject.org/config/install.sqlite
     [test.galaxyproject.org]=/cvmfs/test.galaxyproject.org/var/galaxy_test_install.sqlite
     [main.galaxyproject.org]=/cvmfs/main.galaxyproject.org/var/galaxy_main_install.sqlite
